[package]
name = "selfieRust"
version = "0.1.0"
authors = ["matteo"]

[dependencies]
glib = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
opencv = "0.2.3"

[features]
#default = ["gtk_3_20"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
